tests/sources/invalid/arrays/array_literal_unresolvable_element.fire
// An array literal whose first element is an undefined identifier: its
// type can't be determined, so the whole array literal's type check
// bails out rather than trying to infer from a bad element.
fn main() -> int32 {
    arr: int32[] = [undef, 2];  //~ ERROR FS-PARSE-0003 @21
    return 0;
}
